--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="fixed-preview"></div>
 
-    <!-- <div id="loader"> <h1>ENVIRONMENTS</h1> <h1>EXPERIENCES</h1> <h1>CONTENT</h1> </div> -->
+    <div id="loader"> <h1>ENVIRONMENTS</h1> <h1>EXPERIENCES</h1> <h1>CONTENT</h1> </div>
 
     <div class="parallax-layer parallax-deep" style="background: radial-gradient(circle, #1a1a1a 0%, #000000 100%); z-index: -3;"></div>
     <div class="parallax-layer parallax-back" style="background: linear-gradient(45deg, #0d0d0d 0%, #1a1a1a 100%); z-index: -2;"></div>
